# plate-api

./: Cargo.toml  Dockerfile
.github/workflows/: build_image.yml
src/: main.rs  plate.rs
terraform/: .terraform.lock.hcl  main.tf  vars.tf
terraform/image/: Dockerfile
