[package]
name = "plate-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
env_logger = "0.9.0"
figment = { version = "0.10.6", features = ["env"] }
serde = { version = "1.0.142", features = ["derive"] }
