[package]
name = "plate-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
env_logger = "0.9.1"
figment = { version = "0.10.7", features = ["env"] }
futures = "0.3.24"
log = "0.4.17"
reqwest = { version = "0.11.12", features = ["cookies"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.35"
